##################
## Version 1.72 ##
##################
• Better comments in the files in examples/.

• Various bug fixes.



##################
## Version 1.71 ##
##################
• Audioguide now supports writing reaper .rpp files. See examples/11-dawOutput.py for details.

• Added options for automatically launching .rpp and .aaf files after they are written. See AAF_AUTOLAUNCH and RPP_AUTOLAUNCH.

• Aaf and rpp output files now write the target soundfile in segments. These file formats also now support target signal decomposition - the segmented, decomposed target soundfile will be written to multiple tracks. See the reaper output in examples/08-polyphony.py.



#################
## Version 1.7 ##
#################
• Audioguide now has it’s own youtube channel, featuring a 5-part comprehensive tutorial on getting started with AudioGuide. You can browse the whole tutorial by topic on the new tutorials page.
https://www.youtube.com/channel/UCGvNi_pIEvWuiF_w3ZK8jOQ
http://www.benhackbarth.com/audioGuide/tutorial.html

• AudioGuide concatenations can now be written to .aaf files and opened in Logic/Pro Tools. See examples/11-dawOutput.py or https://www.youtube.com/watch?v=rHQI-jXd6iU

• Nadir Babouri created an AudioGuide package for the Atom Text Editor. See https://github.com/nadirB/audioguide-snippets


#################
## Version 1.6 ##
#################
• agConcatenate.py can now be run in "interactive mode" by adding the -i flag at runtime. Interactive mode runs agConcatenate.py as normal except that, after rending and playing the concatenated output, the program stays open and monitors the options file for changes. When the options file is modified and saved, agConcatenate.py will examine the changes and rerun the parts of the program needed to create a new output. This makes it possible to use AudioGuide without having to repeatedly load large corpi. See https://www.youtube.com/watch?v=h0Ee77VoFe0
 